--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-Hello CodeZone
+<!DOCTYPE html>
 <html>
   <body>
-    <h1> hiiii </h1>
+    <h1> hiiii Hello CodeZone </h1>
     <h2> hellooo </h2>
   
   
