--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <h1> hiiii Hello CodeZone </h1>
     <h2> hellooo </h2>
-  <a href="https://www.youtube.com">click here</a>
+  <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
   
   </body>
   
