Updated my resume

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <body>
     <h1> hiiii Hello CodeZone </h1>
     <h2> hellooo </h2>
-  <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+  <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </br>
+    <a href="resume.html">My Resume </a>
   
   </body>
   
