--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <h1> Welcome to CodeZone </h1>
     <h2>Founder-Appayya Badiger </h2>
     <h2>Establish-16-03-2021</h2>
-  <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </br>
-    <a href="resume.html">My Resume </a>
-  
+ <!-- <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </br>-->
+    <h1><a href="resume.html">My Resume </a></h1>
+	<img src = "img.jpg"></img>
+		
+		
   </body>
   
   </html>
