--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h2>Establish-16-03-2021</h2>
  <!-- <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </br>-->
     <h1><a href="resume.html">My Resume </a></h1>
-	<img src = "img.jpg"></img>
+	<img src = "img.JPG"></img>
 		
 		
   </body>
