notes link added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <h2>Establish-16-03-2021</h2>
  <!-- <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </br>-->
     <h1><a href="resume.html">My Resume </a></h1>
-	<img src = "img.JPG"></img>
-		
+	<h1><a href="cora-java.txt">---CORA JAVA NOTES--- </a></h1>
+	<img src = "img.JPG"></img>	
 		
   </body>
-  
   </html>
